--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@trigger.dev/sdk": "3.0.0-beta.55",
 		"@vercel/blob": "0.23.4",
 		"@vercel/flags": "2.6.1",
+		"@vercel/functions": "^1.5.0",
 		"@vercel/otel": "1.10.0",
 		"@vercel/postgres": "0.9.0",
 		"@vercel/speed-insights": "1.0.12",
