--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"import-in-the-middle": "1.11.0",
 		"input-otp": "^1.2.4",
 		"langfuse": "3.26.0",
+		"langfuse-vercel": "3.29.1",
 		"lucide-react": "0.417.0",
 		"next": "15.0.2",
 		"next-auth": "^5.0.0-beta.20",
